# Kup

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TextArea.hpp  build.sh  ci-build.sh  debug.sh  opengl-ci.yml  scraps.txt  xmake.lua
.github/workflows/: build.yml  main.yml  msys2.yml
Writerside/: k.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: README.md
cmake/: Dependencies.cmake  FindLua51.cmake  fetch_glfw3.cmake  fetch_raygui.cmake
ext/tinyfd/: CMakeLists.txt
libs/editor/: CmakeLists.txt
libs/fs/: CMakeLists.txt
libs/fs/include/fs/: fs_config.hpp
libs/fs/include/modules/: config.ixx  fs.ixx  path_list.ixx  tree.ixx
libs/hyro/: CMakeLists.txt
libs/hyro/include/hyro/: font.hpp  hyro.hpp
libs/keditor/: CmakeLists.txt
libs/krusty/: CMakeLists.txt
libs/krusty/include/: krusty.hpp  result.hpp
libs/krusty/include/modules/: either.ixx  expected.ixx  fallible.ixx  krusty.ixx  never.ixx  option.ixx  result.ixx  try_chain.ixx  unit.ixx
libs/lsp/: CMakeLists.txt
libs/plastic/: CMakeLists.txt  README.md
libs/plastic/cmake/: bin2h.cmake
libs/plastic/examples/: CMakeLists.txt
libs/plastic/examples/basic/: basic_window.cpp  counter.cpp
libs/plastic/include/modules/: Style.ixx  animation.ixx  animation_manager.ixx  app.ixx  app_builder.ixx  app_context.ixx  app_helpers.ixx  app_runner.ixx  application.ixx  color.ixx  command.ixx  component.ixx  component_registry.ixx  component_system.ixx  components.ixx  container.ixx  context.ixx  context_bridge.ixx  data_binding.ixx  div.ixx  edge.ixx  element.ixx  element_builder.ixx  element_pool.ixx  entity_map.ixx  event_dispatcher.ixx  event_handler_base.ixx  event_listener.ixx  event_queue.ixx  event_visitor.ixx  events.ixx  focus_manager.ixx  font.ixx  gesture_recognizer.ixx  graphics.ixx  history.ixx  horizontal_layout.ixx  input.ixx  layout.ixx  layout_container.ixx  (+41 more)
libs/plastic/include/modules/animation/: animation.ixx  animation_base.ixx  animation_manager.ixx  transition_property.ixx
libs/plastic/include/modules/app/: app.ixx  app_builder.ixx  app_context.ixx  app_helpers.ixx  app_runner.ixx
libs/plastic/include/modules/audio/: audio.ixx  callback.ixx  device.ixx  music.ixx  sound.ixx  stream.ixx  wave.ixx
libs/plastic/include/modules/core/: README.md
libs/plastic/include/modules/core/interfaces/: command.ixx  component.ixx  context.ixx
libs/plastic/include/modules/core/layout/: base.ixx
libs/plastic/include/modules/core/types/: color.ixx  data_binding.ixx  model.ixx  reactive.ixx
libs/plastic/include/modules/core/types/geometry/: edge.ixx  point.ixx  rect.ixx  size.ixx
libs/plastic/include/modules/core/util/: object_pool.ixx  ref_count.ixx  text_selection.ixx
libs/plastic/include/modules/core/wrap/: font.ixx
libs/plastic/include/modules/elements/: basic_elements.ixx  containers.ixx  div.ixx  layout_container.ixx  scrollable.ixx  scrollable_base.ixx  styled_text.ixx  tree_view.ixx  virtual_list.ixx
libs/plastic/include/modules/error/: assert.ixx  error.ixx  error_handler.ixx  result.ixx
libs/plastic/include/modules/events/: event_batcher.ixx  event_broadcast.ixx  event_bus.ixx  event_delegate.ixx  event_delegation.ixx  event_dispatcher.ixx  event_logger.ixx  event_queue.ixx  event_recorder.ixx  event_system.ixx  event_throttler.ixx  event_visitor.ixx  events.ixx  focusable.ixx  single_event_listener.ixx  typed_event_handler.ixx
libs/plastic/include/modules/font/: font_registry.ixx  key.ixx  utils.ixx  weight.ixx
libs/plastic/include/modules/font/key/: hash.ixx
libs/plastic/include/modules/fs/: filesystem.ixx
libs/plastic/include/modules/interfaces/: constraint.ixx  element.ixx  platform.ixx  platform_interface.ixx  view.ixx
libs/plastic/include/modules/layout/: flex_direction.ixx  flex_layout.ixx  grid_layout.ixx  horizontal_layout.ixx  layout.ixx  layout_constraint.ixx  layout_properties.ixx  vertical_layout.ixx
libs/plastic/include/modules/layout/builders/: flex_builder.ixx  layout_builder.ixx
libs/plastic/include/modules/text/: rich_text.ixx  text.ixx  text_fmt.ixx  text_layout.ixx
libs/plastic/include/modules/types/: constrain_anchor.ixx  constraints.ixx  model_context.ixx  state.ixx  stateful_view.ixx  style.ixx  theme.ixx  view_wrapper.ixx
libs/plastic/include/modules/util/: component_registry.ixx  components.ixx  entity_map.ixx  history.ixx  ui.ixx
libs/plastic/include/modules/window/: glfw_window_raii.ixx  window.ixx  window_base.ixx  window_builder.ixx  window_manager.ixx  window_manager_interface.ixx  window_options.ixx  window_types.ixx
libs/plastic/include/modules/wrap/: graphics.ixx  raylib_platform.ixx
libs/plastic/include/plastic/: basic_concurrent_window.hpp  component.hpp  config.hpp  container.hpp  context.hpp  element.hpp  layout.hpp  layout_properties.hpp  model.hpp  panel.hpp  plastic.hpp  plastic_prototype.hpp  point.hpp  rect.hpp  size.hpp  vertical_layout.hpp  view.hpp
libs/plastic/include/plastic/events/: event_system.hpp
libs/plastic/include/plastic/prototype/: any_context.hpp  component.hpp  container.hpp  context.hpp  element.hpp  layout.hpp  layout_properties.hpp  model.hpp  panel.hpp  plastic.hpp  point.hpp  vertical_layout.hpp  view.hpp
libs/plastic/res/fonts/Plasevka/: Plasevka-Unhinted.css  Plasevka.css
libs/plastic/src/: plastic.cpp  plastic_prototype.cpp
libs/plugin/: CMakeLists.txt
libs/solkup/: CMakeLists.txt
libs/term/: CMakeLists.txt
plastic/: CMakeLists.txt
res/: dark.rgs  darkblox.rgs
scripts/: convert_file_to_header.lua
src/: App.cpp  App.hpp  Button.hpp  FileTree.cpp  FileTree.hpp  LuaAPI.h  Piece.h  PieceTable.hpp  TextArea.cpp  TextArea.hpp  api.h  editor.hpp  font.h  interfaces.hpp  kup.h  kuputils.c  kuputils.cpp  kuputils.h  kuputils.hpp  main.cpp  piece.h  piece_table.hpp  piece_table_claude.hpp  scroll_bar.hpp  types.h  view.h  view.hpp
src/editor/: App.hpp  app.cpp  app.hpp  buffer.hpp  editor_state.hpp  editor_view.hpp  file_tree_view.hpp  line_numbers.hpp  piece_table.hpp  text_view.hpp
(+64 files in other folders)
